# py-packed-struct

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml  release.yml
.semversioner/: 0.6.0.json  1.0.0.json  1.0.1.json  2.0.0.json
examples/array/: array_of_ints.py  array_of_structs.py
examples/bit-fields/: bit_field.py
examples/complex/: warehouse_grid.py
examples/mqtt/: publisher.py  subscriber  subscriber.c
examples/nested-struct/: nested_struct.py
examples/not-packed-struct/: simple_struct.py
packed_struct/: __init__.py  packed_struct.py  types.py
tests/: test_utils.py  tests.py
