[build-system]
requires = ["setuptools>=61.0", "wheel", "bitstruct"]
build-backend = "setuptools.build_meta"

[project]
name = "py-packed-struct"
dynamic = ["version"]
description = "An implementation of C-like packed structures in Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Luca Macavero", email = "luca.macavero@gmail.com" }
]
maintainers = [
    { name = "Luca Macavero", email = "luca.macavero@gmail.com" }
]
dependencies = [
    "bitstruct"
]

[project.urls]
Homepage = "https://github.com/lu-maca/py-packed-struct"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "packed_struct.__version__"}
